--- a/index.html
+++ b/index.html
@@ -6853,182 +6853,158 @@ function showOfflinePopup(url) {
 // ✅ Make it ALWAYS run every 30 seconds
 setInterval(handleURLVisitAlways, 30000);
 
-function createTaskManagerApp() {
-  // === 1. Inject Task Manager Styles into <head> ===
-  const style = document.createElement('style');
-  style.textContent = `
-    /* Task Manager Scoped Styles */
-    .taskmgr-window {
-      position: absolute;
-      display: flex;
-      flex-direction: column;
-      min-width: 360px;
-      max-width: 900px;
-      min-height: 220px;
-      max-height: 540px;
-      border-radius: 14px;
-      box-shadow: 0 18px 40px rgba(0,0,0,0.45);
-      overflow: hidden;
-      background: radial-gradient(circle at top left, #ff9aeb, #b400ff 40%, #2b0b4f 80%);
-      color: #fdfcff;
-      z-index: 1200;
-      opacity: 0;
-      transform: translateY(20px) scale(0.96);
-      pointer-events: none;
-      transition: opacity 0.25s ease, transform 0.25s ease;
-    }
-    .taskmgr-window.visible {
-      opacity: 1;
-      transform: translateY(0) scale(1);
-      pointer-events: auto;
-    }
-    .taskmgr-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 6px 10px;
-      background: linear-gradient(90deg, rgba(255,255,255,0.12), rgba(0,0,0,0.25));
-      backdrop-filter: blur(18px);
-    }
-    .taskmgr-header-left {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-    .taskmgr-icon {
-      width: 22px;
-      height: 22px;
-      border-radius: 6px;
-      background: linear-gradient(135deg, #ff7ad9, #b400ff);
-    }
-    .taskmgr-title {
-      font-weight: 600;
-      font-size: 13px;
-    }
-    .taskmgr-header-right .taskmgr-btn {
-      border: none;
-      background: transparent;
-      color: #fdfcff;
-      padding: 4px 8px;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.15s ease, transform 0.1s ease;
-    }
-    .taskmgr-header-right .taskmgr-btn:hover {
-      background: rgba(255,255,255,0.12);
-      transform: translateY(-1px);
-    }
-    .taskmgr-body {
-      padding: 10px;
-      background: radial-gradient(circle at top, rgba(255,255,255,0.18), rgba(0,0,0,0.65));
-      height: calc(100% - 34px);
-      box-sizing: border-box;
-    }
-    .taskmgr-sidebar-item.active,
-    .taskmgr-tab-btn.active,
-    .taskmgr-btn-endtask {
-      background: linear-gradient(135deg, #ff7ad9, #b400ff);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
-    }
-  `;
-  document.head.appendChild(style);
+// Example window skeleton for consistency
+function createAppWindowSkeleton(appId, title, iconEmoji) {
+  const win = document.createElement('div');
+  win.className = 'win12-window';
+  win.id = appId;
 
-  // === 2. Create Task Manager Window ===
-  const taskMgrWin = document.createElement('div');
-  taskMgrWin.className = 'taskmgr-window';
-  taskMgrWin.id = 'window-taskmgr';
-  taskMgrWin.innerHTML = `
-    <div class="taskmgr-header" data-drag-handle>
-      <div class="taskmgr-header-left">
-        <div class="taskmgr-icon"></div>
-        <div class="taskmgr-title">Task Manager</div>
+  win.innerHTML = `
+    <div class="win12-window-header">
+      <div class="win12-window-header-left">
+        <span class="win12-window-icon">${iconEmoji || '🧩'}</span>
+        <span class="win12-window-title">${title}</span>
       </div>
-      <div class="taskmgr-header-right">
-        <button class="taskmgr-btn taskmgr-close">×</button>
+      <div class="win12-window-header-right">
+        <button class="win12-window-btn win12-window-minimize">_</button>
+        <button class="win12-window-btn win12-window-maximize">▢</button>
+        <button class="win12-window-btn win12-window-close">✕</button>
       </div>
     </div>
-    <div class="taskmgr-body">
-      <div class="taskmgr-container">
-        <aside class="taskmgr-sidebar">
-          <div class="taskmgr-sidebar-header">Task Manager</div>
-          <ul class="taskmgr-sidebar-list">
-            <li class="taskmgr-sidebar-item active">Processes</li>
-            <li class="taskmgr-sidebar-item">Performance</li>
-            <li class="taskmgr-sidebar-item">Users</li>
-          </ul>
-        </aside>
-        <main class="taskmgr-main">
-          <div class="taskmgr-main-header">
-            <div class="taskmgr-main-tabs">
-              <button class="taskmgr-tab-btn active">Processes</button>
-              <button class="taskmgr-tab-btn">Performance</button>
-              <button class="taskmgr-tab-btn">Users</button>
-            </div>
-            <div class="taskmgr-main-actions">
-              <button class="taskmgr-btn taskmgr-btn-refresh">Refresh</button>
-              <button class="taskmgr-btn taskmgr-btn-endtask">End Task</button>
-            </div>
-          </div>
-          <div class="taskmgr-main-content">
-            <section class="taskmgr-tab active">Processes content...</section>
-            <section class="taskmgr-tab">Performance content...</section>
-            <section class="taskmgr-tab">Users content...</section>
-          </div>
-        </main>
-      </div>
-    </div>
+    <div class="win12-window-body"></div>
   `;
-  document.body.appendChild(taskMgrWin);
 
-  // === 3. Create Start Menu Icon ===
-  const startGrid = document.getElementById('start-pinned-grid');
-  const taskMgrTile = document.createElement('div');
-  taskMgrTile.className = 'start-app';
-  taskMgrTile.dataset.app = 'taskmgr';
-  taskMgrTile.innerHTML = `
-    <div class="start-app-icon" style="background:linear-gradient(135deg,#ff7ad9,#b400ff);"></div>
-    <div>Task Manager</div>
-    <div class="start-app-sub">Monitor apps & performance</div>
-  `;
-  startGrid.appendChild(taskMgrTile);
-
-  // === 4. Wire up open/close logic ===
-  taskMgrTile.addEventListener('click', () => {
-    taskMgrWin.classList.add('visible');
-    bringWindowToFront(taskMgrWin);
-  });
-  taskMgrWin.querySelector('.taskmgr-close').addEventListener('click', () => {
-    taskMgrWin.classList.remove('visible');
-  });
-
-  // === 5. Enable drag and fullscreen toggle ===
-  const header = taskMgrWin.querySelector('[data-drag-handle]');
-  let dragging = false, sx, sy, sl, st;
-  header.addEventListener('mousedown', e => {
-    dragging = true;
-    const rect = taskMgrWin.getBoundingClientRect();
-    sx = e.clientX; sy = e.clientY; sl = rect.left; st = rect.top;
-    document.body.style.cursor = 'move';
-    bringWindowToFront(taskMgrWin);
-  });
-  window.addEventListener('mousemove', e => {
-    if (!dragging) return;
-    taskMgrWin.style.left = sl + (e.clientX - sx) + 'px';
-    taskMgrWin.style.top = st + (e.clientY - sy) + 'px';
-  });
-  window.addEventListener('mouseup', () => {
-    dragging = false;
-    document.body.style.cursor = 'default';
-  });
-
-  function bringWindowToFront(win) {
-    win.style.zIndex = parseInt(win.style.zIndex || 1200) + 1;
-  }
+  document.body.appendChild(win);
+  return win;
 }
 
+// Main Task Manager initializer
+function initTaskManager() {
+  const appId = 'taskmgr';
+  const appTitle = 'Task Manager';
+
+  // Ensure windowsMap exists
+  window.windowsMap = window.windowsMap || new Map();
+
+  // Create window if not already created
+  let win = document.getElementById(appId);
+  if (!win) {
+    win = createAppWindowSkeleton(appId, appTitle, '📊');
+  }
+
+  const body = win.querySelector('.win12-window-body');
+  body.classList.add('taskmgr-body');
+
+  // Build Task Manager layout
+  body.innerHTML = `
+    <div class="taskmgr-container">
+      <aside class="taskmgr-sidebar"></aside>
+      <main class="taskmgr-main">
+        <div class="taskmgr-main-header">
+          <div class="taskmgr-main-tabs">
+            <button class="taskmgr-tab-btn active" data-tab="processes">Processes</button>
+            <button class="taskmgr-tab-btn" data-tab="performance">Performance</button>
+            <button class="taskmgr-tab-btn" data-tab="app-history">App History</button>
+            <button class="taskmgr-tab-btn" data-tab="startup">Startup</button>
+            <button class="taskmgr-tab-btn" data-tab="users">Users</button>
+            <button class="taskmgr-tab-btn" data-tab="details">Details</button>
+            <button class="taskmgr-tab-btn" data-tab="services">Services</button>
+          </div>
+          <div class="taskmgr-main-actions">
+            <button class="taskmgr-btn taskmgr-btn-refresh">Refresh</button>
+            <button class="taskmgr-btn taskmgr-btn-endtask">End Task</button>
+          </div>
+        </div>
+        <div class="taskmgr-main-content">
+          <section class="taskmgr-tab taskmgr-tab-processes active"></section>
+          <section class="taskmgr-tab taskmgr-tab-performance"></section>
+          <section class="taskmgr-tab taskmgr-tab-app-history"></section>
+          <section class="taskmgr-tab taskmgr-tab-startup"></section>
+          <section class="taskmgr-tab taskmgr-tab-users"></section>
+          <section class="taskmgr-tab taskmgr-tab-details"></section>
+          <section class="taskmgr-tab taskmgr-tab-services"></section>
+        </div>
+      </main>
+    </div>
+  `;
+
+  const sidebarEl = body.querySelector('.taskmgr-sidebar');
+  const processesTabEl = body.querySelector('.taskmgr-tab-processes');
+  const performanceTabEl = body.querySelector('.taskmgr-tab-performance');
+  const usersTabEl = body.querySelector('.taskmgr-tab-users');
+
+  // Render sidebar
+  function renderSidebar() {
+    const sections = [
+      'Processes', 'Performance', 'App History', 'Startup', 'Users', 'Details', 'Services'
+    ];
+    sidebarEl.innerHTML = `
+      <div class="taskmgr-sidebar-header">Task Manager</div>
+      <ul class="taskmgr-sidebar-list">
+        ${sections.map((name, idx) => `
+          <li class="taskmgr-sidebar-item ${idx === 0 ? 'active' : ''}" data-tab="${name.toLowerCase().replace(' ', '-')}">
+            <span class="taskmgr-sidebar-dot"></span>
+            <span class="taskmgr-sidebar-label">${name}</span>
+          </li>
+        `).join('')}
+      </ul>
+    `;
+  }
+
+  // Tabs interaction
+  function wireTabs() {
+    const tabButtons = body.querySelectorAll('.taskmgr-tab-btn');
+    const tabs = body.querySelectorAll('.taskmgr-tab');
+    const sidebarItems = body.querySelectorAll('.taskmgr-sidebar-item');
+
+    function activateTab(tabName) {
+      tabButtons.forEach(btn => btn.classList.toggle('active', btn.dataset.tab === tabName));
+      tabs.forEach(tab => tab.classList.toggle('active', tab.classList.contains(`taskmgr-tab-${tabName}`)));
+      sidebarItems.forEach(item => item.classList.toggle('active', item.dataset.tab === tabName));
+    }
+
+    tabButtons.forEach(btn => btn.addEventListener('click', () => activateTab(btn.dataset.tab)));
+    sidebarItems.forEach(item => item.addEventListener('click', () => activateTab(item.dataset.tab)));
+  }
+
+  // Wire actions
+  function wireActions() {
+    const refreshBtn = body.querySelector('.taskmgr-btn-refresh');
+    if (refreshBtn) refreshBtn.addEventListener('click', () => alert('Refreshing...'));
+  }
+
+  // Window controls
+  const btnClose = win.querySelector('.win12-window-close');
+  const btnMin = win.querySelector('.win12-window-minimize');
+  const btnMax = win.querySelector('.win12-window-maximize');
+
+  btnClose.addEventListener('click', () => win.classList.remove('visible'));
+  btnMin.addEventListener('click', () => win.classList.remove('visible'));
+  btnMax.addEventListener('click', () => win.classList.toggle('fullscreen'));
+
+  // Add Start Menu icon
+  const startGrid = document.getElementById('start-pinned-grid');
+  if (startGrid && !startGrid.querySelector('[data-app="taskmgr"]')) {
+    const startBtn = document.createElement('div');
+    startBtn.className = 'start-app';
+    startBtn.dataset.app = appId;
+    startBtn.innerHTML = `
+      <div class="start-app-icon" style="background:linear-gradient(135deg,#ff7ad9,#b400ff);"></div>
+      <div>Task Manager</div>
+      <div class="start-app-sub">Monitor apps & performance</div>
+    `;
+    startGrid.appendChild(startBtn);
+    startBtn.addEventListener('click', () => win.classList.add('visible'));
+  }
+
+  // Initialize UI
+  renderSidebar();
+  wireTabs();
+  wireActions();
+}
       /* initial */
       function initialSetup(){
-        createTaskManagerApp();
+        initTaskManager();
         createWordApp();
         createRunWindow();
         refreshAll();
